fixed a problem with height collapse of the title bar caused by flex layout

--- a/src/renderer/components/TitleBar/style.module.scss
+++ b/src/renderer/components/TitleBar/style.module.scss
@@ -39,4 +39,5 @@
 
 .placeholder {
   width: 100%;
+  flex-shrink: 0;
 }
